--- a/master-react-movies/src/TEMPLATE.html
+++ b/master-react-movies/src/TEMPLATE.html
@@ -1,31 +1,31 @@
-<div class="container">
+<div className="container">
     <header>
-        <div class="logo">MOVIEFLIX</div>
-        <div class="menus">
-            <div class="item">Inicio</div>
-            <div class="item">Peliculas</div>
-            <div class="item">Blog</div>
-            <div class="item">Contacto</div>
+        <div className="logo">MOVIEFLIX</div>
+        <div className="menus">
+            <div className="item">Inicio</div>
+            <div className="item">Peliculas</div>
+            <div className="item">Blog</div>
+            <div className="item">Contacto</div>
         </div>
     </header>
-    <main class="container__main">
-        <div class="container__inner">
+    <main className="container__main">
+        <div className="container__inner">
 
-            <div class="cards">
-                <div class="cards__item">
+            <div className="cards">
+                <div className="cards__item">
                     Pelicula
                 </div>
-                <div class="controls">
-                    <div class="action">Editar</div>
-                    <div class="action">Borrar</div>
-                    <div class="action">Ver</div>
+                <div className="controls">
+                    <div className="action">Editar</div>
+                    <div className="action">Borrar</div>
+                    <div className="action">Ver</div>
                 </div>
             </div>
 
         </div>
 
     </main>
-    <footer class="footer">
+    <footer className="footer">
         © App React - <a href="">sergiogallegos.com</a>
     </footer>
 </div>
